<resources>
    <string name="app_name">DashBoard</string>
    <string name="pizza">Pizza</string>
    <string name="salads">Salads</string>
    <string name="desserts">Desserts</string>
    <string name="pasta">Pasta</string>
    <string name="beverages">Beverages</string>
    <string name="itemsPizza">25 items"</string>
    <string name="itemsSalads">30 items</string>
    <string name="itemsdesserts">30 items</string>
    <string name="itemspasta">44items</string>
    <string name="itemsBeverages">30items</string>
    <string name="pizzaMenu">Pizza\nMenu</string>
    <string name="pizza1">pizza quattro\nformaggi</string>
    <string name="pizza1info">informações</string>
    <string name="precio">precio</string>
    <string name="fsb_salads">fsb_salads</string>
    <string name="fab_desserts">fab_desserts</string>
    <string name="fab_pizza">fab_pizza</string>
    <string name="fab_pasta">fab_pasta</string>


</resources>